--- a/Services.GageRR.WebApp/Pages/AverageRangeMethod.cshtml
+++ b/Services.GageRR.WebApp/Pages/AverageRangeMethod.cshtml
@@ -108,7 +108,7 @@
             <input id="su" name="su" value="24.2" type="number" />
         </div>
         <div style="grid-column: 5/7;">
-            <button onclick="Page.calcuate()">Gage R&R 계산</button>
+            <button onclick="Page.calcuate()">Avg_Range Gage R&R 계산</button>
         </div>
     </div>
     @* 헤더  *@
